addding delete item

--- a/src/css/adminMenu.css
+++ b/src/css/adminMenu.css
@@ -38,12 +38,17 @@
     -fx-border:2px #000 solid; 
     -fx-background-color: #b9cefa; 
     -fx-padding-top:20px;
-}
-#editBtnBox
+} 
+#editItemBtnBox,#deleteItemBtn,#deleteItem
 {
     -fx-font-size:12px;
     -fx-font-style: italic;
-    -fx-border:2px #000 solid; 
+    -fx-border:2px #000 solid;  
+    -fx-border-style: solid;-fx-border-color:#e5f7f9;
+    -fx-border-width:2;
+}
+#editItemBtnBox,#deleteItem
+{
     -fx-background-color: #b9cefa; 
-    -fx-padding-top:20px;
+    -fx-padding-top:20px; 
 }
